# WebResourceScan

./: .gitignore  PALN.md  README.md  classifier.py  crawler.py  main.py  pyproject.toml  reporter.py  setup.sh  urls.txt
analysis/: clean.py
src/: classifier.py  config.py  crawler.py  raw_io.py  reporter.py  run_aggregate.py  run_clean.py  run_crawl.py  run_plot.py  run_process.py  stealth.py
src/analysis/: categories.py  clean.py  plot.py  plot_domains.py  plot_industry.py  style.py  vulns.py
tests/: test_classifier.py  test_crawler.py  test_docs_compile_entry.py  test_raw_io.py  test_remove_vulnerability_pipeline.py  test_reporter.py  test_run_plot.py
