[project]
name = "advancedcypersecurity"
version = "0.1.0"
description = "Web resource classifier — crawls URLs, classifies third-party domains by industry, outputs CSV statistics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.40",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "tqdm>=4.0",
    "python-dotenv>=1.0",
]

[project.scripts]
crawl = "src.run_crawl:main"
aggregate = "src.run_aggregate:main"
clean = "src.analysis.clean:main"
plot = "src.analysis.plot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
