[project]
name = "advancedcypersecurity"
version = "0.1.0"
description = "Web resource classifier — crawls URLs, classifies third-party domains by industry, outputs CSV statistics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.40",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "tqdm>=4.0",
    "python-dotenv>=1.0",
]

[project.scripts]
crawl   = "src.run_crawl:main"
process = "src.run_process:main"
plot    = "src.run_plot:main"
clean   = "src.run_clean:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
